<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/borderResgistrer"
    android:background="@color/violet">

    <EditText
        android:id="@+id/user_surmane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surnameInput"
        android:padding="@dimen/defaultMargin"
        android:background="@color/gray"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameInput"
        android:layout_marginTop="@dimen/defaultMargin"
        android:padding="@dimen/defaultMargin"
        android:background="@color/gray"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/defaultMargin"
        android:padding="@dimen/defaultMargin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countryLabel"
            android:textSize="15dp"/>

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/chooseCountrySpinnerInput"
            android:layout_marginLeft="@dimen/defaultMargin"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/defaultMargin"
        android:padding="@dimen/defaultMargin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/markVehiculeLabel"
            android:textSize="15dp"/>

        <Spinner
            android:id="@+id/mark_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/chooseVehiculeMarkSpinnerInput"
            android:layout_marginLeft="@dimen/defaultMargin"/>

    </LinearLayout>


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@color/gray"
        android:padding="@dimen/defaultMargin"
        android:text="@string/confirmButtonText"
        android:textSize="18dp" />

</LinearLayout>