<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".ConnectionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/headerMargin"
            android:src="@drawable/logo" />

        <TextView
            style="@style/defaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/app_name"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16dp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/borderResgistrer"
            android:background="@color/violet">

            <TextView
                android:id="@+id/textInstruction"
                style="@style/defaultTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMargin"
                android:text="@string/instructionText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/connection_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connectionButton"
                android:textStyle="bold"
                android:padding="@dimen/defaultMargin"
                android:layout_marginTop="@dimen/headerMargin"
                app:layout_constraintTop_toBottomOf="@+id/textInstruction" />

        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>