<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/violet"
    tools:context=".ScanCodeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/headerMargin"
            android:src="@drawable/logo" />

        <TextView
            style="@style/defaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/app_name"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="16dp" />

        <FrameLayout
            android:id="@+id/camera_data"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@color/white"
            android:layout_margin="@dimen/marginScanBox"/>

        <TextView
            android:id="@+id/textView3"
            style="@style/defaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanInstruction"
            app:layout_constraintTop_toBottomOf="@+id/camera_data" />

    </LinearLayout>


  </androidx.constraintlayout.widget.ConstraintLayout>